--- a/hive.scss
+++ b/hive.scss
@@ -1,13 +1,13 @@
+// DON'T CHANGE ANYTHING IN THIS FILE!
+// setup hive in _hive_config.scss file
+
 @import "hive_config";
 
-/** HIVE SCSS YET ANOTHER RESPONSIVE GRID SYSTEM
- ** Author Matteo Papadopoulos aka @spleenteo on twitter
- ** http://www.cantierecreativo.net
+/** THIS SITE USE HIVE SCSS - YET ANOTHER RESPONSIVE GRID SYSTEM
+ ** https://github.com/spleenteo/hive
  **/
-
-// private from here
-// DON'T CHANGE ANYTHING HERE BELOW!
-$unit: $width / 10;
+ // Author Matteo Papadopoulos aka @spleenteo
+ // http://www.cantierecreativo.net
 
 @mixin clearfix(){
     display: block;
@@ -24,6 +24,7 @@ $unit: $width / 10;
     }
 }
 
+$unit: $width / 10;
 @if $responsive == 0 {
     .hive{
         @include clearfix();
